[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/empty_space/space.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main.gd" type="Script" id=2]
[ext_resource path="res://src/empty_space/space_2.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/LuckiestGuy-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/UI/settings.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Sfx/84322__splashdust__flipcard.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/Sfx/dersuperanton__taking-card_trimmed.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/Sfx/559531__johnny2810__card.mp3" type="AudioStream" id=8]
[ext_resource path="res://src/UI/win_dialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Sfx/shuffle.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="InputEventAction" id=4]
action = "reset_board"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 4 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
card_offset = Vector2( -4, 18 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="SettingsButton" type="Button" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -451.0
margin_top = 101.0
margin_right = -154.0
margin_bottom = 202.0
custom_fonts/font = SubResource( 1 )
text = "MENU"

[node name="Reset" type="Button" parent="UI"]
margin_left = 203.0
margin_top = 100.0
margin_right = 462.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "RESET"

[node name="Back" type="Button" parent="UI"]
margin_left = 492.0
margin_top = 100.0
margin_right = 751.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "BACK"

[node name="Settings" parent="UI" instance=ExtResource( 5 )]
visible = false

[node name="WinDialog" parent="UI" instance=ExtResource( 9 )]
unique_name_in_owner = true
margin_left = -1491.0
margin_top = -780.0
margin_right = -849.0
margin_bottom = -300.0

[node name="Spaces" type="Node2D" parent="."]
position = Vector2( 315, 460 )
__meta__ = {
"_edit_group_": true
}

[node name="Empty space" parent="Spaces" instance=ExtResource( 1 )]

[node name="Empty space2" parent="Spaces" instance=ExtResource( 1 )]
position = Vector2( 260, 0 )

[node name="Empty space3" parent="Spaces" instance=ExtResource( 1 )]
position = Vector2( 520, 0 )

[node name="Empty space4" parent="Spaces" instance=ExtResource( 1 )]
position = Vector2( 780, 0 )

[node name="Empty space5" parent="Spaces" instance=ExtResource( 1 )]
position = Vector2( 1040, 0 )

[node name="Empty space6" parent="Spaces" instance=ExtResource( 1 )]
position = Vector2( 1300, 0 )

[node name="Empty space7" parent="Spaces" instance=ExtResource( 1 )]
position = Vector2( 1560, 0 )

[node name="Empty space8" parent="Spaces" instance=ExtResource( 1 )]
position = Vector2( 1820, 0 )

[node name="TopSpaces" type="Node2D" parent="."]
position = Vector2( 870, 135 )
__meta__ = {
"_edit_group_": true
}

[node name="Empty space" parent="TopSpaces" instance=ExtResource( 3 )]

[node name="Empty space2" parent="TopSpaces" instance=ExtResource( 3 )]
position = Vector2( 200, 0 )
index = 1

[node name="Empty space3" parent="TopSpaces" instance=ExtResource( 3 )]
position = Vector2( 400, 0 )
index = 2

[node name="Empty space4" parent="TopSpaces" instance=ExtResource( 3 )]
position = Vector2( 600, 0 )
index = 3

[node name="SFX" type="Node" parent="."]

[node name="cardPlay" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 7 )
volume_db = 6.008
pitch_scale = 1.5
bus = "SFX"

[node name="cardPick" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )
volume_db = 6.008
pitch_scale = 1.5
bus = "SFX"

[node name="cardFlip" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )
volume_db = 6.008
pitch_scale = 1.5
bus = "SFX"

[node name="shuffle" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 10 )
volume_db = 6.008
pitch_scale = 1.5
bus = "SFX"

[node name="win" type="AudioStreamPlayer" parent="SFX"]
volume_db = 6.008
pitch_scale = 1.5
bus = "SFX"

[node name="Timers" type="Node" parent="."]

[connection signal="pressed" from="UI/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="UI/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="UI/Back" to="." method="_on_Back_pressed"]
